@@ -6,6 +6,8 @@ firefox-trunk (89.0~a1~hg20210322r572328-0ubuntu1) UNRELEASED; urgency=medium
     Launchpad builders
     - debian/build/rules.mk
     - debian/patches/armhf-rustc-thin-lto.patch
+  * Update patches
+    - debian/patches/armhf-do-not-build-qcms-with-neon.patch
 
  -- Rico Tzschichholz <ricotz@ubuntu.com>  Mon, 22 Mar 2021 19:36:32 +0100
 
